--- a/test_2.html
+++ b/test_2.html
@@ -177,69 +177,70 @@
 </html>
 <script type="text/javascript" src="http://code.jquery.com/jquery.js"></script>
 <script type="text/javascript">
+	// 设个全局对象
 	$(function() {
 		$("form").submit(function() {
-			var query=$(this).serializeArray();
-			console.log(query);
+			var query = $(this).serializeArray();
 			DealQuery(query);
 			return false;
 		});
 
 		$('.inputys').click(function() {
-			var query = {};
 			var name = $(this).attr('name');
 			var value = $(this).attr('value');
-
-
-			console.log(query);
+			var query = [{
+				name: name,
+				value: value
+			}];
 			DealQuery(query);
 			return false;
 		});
 
-		// 获得当前页面参数
-		function UrlSearch() {
-			var name, value;
-			var str = location.href; //取得整个地址栏
-			var num = str.indexOf("?")
-			str = str.substr(num + 1); //取得所有参数   stringvar.substr(start [, length ]
-
-			var arr = str.split("&"); //各个参数放到数组里
-			for (var i = 0; i < arr.length; i++) {
-				num = arr[i].indexOf("=");
-				if (num > 0) {
-					name = arr[i].substring(0, num);
-					value = arr[i].substr(num + 1);
-					this[name] = value;
-				}
-			}
-
-		}
-
-
-		// 处理替换参数
-		function DealQuery(query){
-			var Request=new UrlSearch(); //实例化
-			// Request是url当前的条件变成数组的展示
-			// query是现在用户要加入的条件，吧两个数组合并，再做成url参数传到跳转页面就能实现你要的功能
-			var query_array = Array();
-			for(x in Request){
-				query_array[x] = Request[x];
-			}
-			if (query != '') {
-				for (y in query) {
-					query_array[y] = query[y];
-				}
-			}
-			console.log(query_array);return false;
-			// 把当前数组变成url参数的形式传到地址栏
-			var query_data = '?';
-			for(k in query_array){
-				query_data = query_data + k + '=' + query_array[k] + '&';
-			}
-			// 要跳转得url地址 ,写上查询地址
-			window.location.href =  ''+query_data;
-		}
-
-		UrlSearch();
 	});
+
+	// 处理替换参数
+	function DealQuery(query) {
+		var Request = new UrlSearch(); //实例化
+		// Request是url当前的条件变成数组的展示
+		// query是现在用户要加入的条件，吧两个数组合并，再做成url参数传到跳转页面就能实现你要的功能
+		var query_array = Array();
+		for (x in Request) {
+			query_array[x] = Request[x];
+		}
+
+		// 现在需要查询的参数
+		for (var x in query) {
+			var name = query[x]['name'];
+			var value = query[x]['value'];
+			query_array[name] = value;
+		}
+		// console.log(query_array);
+		// return false;
+
+		// 把当前数组变成url参数的形式传到地址栏
+		var query_data = '?';
+		for (k in query_array) {
+			query_data = query_data + k + '=' + query_array[k] + '&';
+		}
+		// 要跳转得url地址 ,写上查询地址
+		window.location.href = '' + query_data;
+	}
+
+	// 获得当前页面参数
+	function UrlSearch() {
+		var name, value;
+		var str = location.href; //取得整个地址栏
+		var num = str.indexOf("?")
+		str = str.substr(num + 1); //取得所有参数   stringvar.substr(start [, length ]
+		var arr = str.split("&"); //各个参数放到数组里
+		for (var i = 0; i < arr.length; i++) {
+			num = arr[i].indexOf("=");
+			if (num > 0) {
+				name = arr[i].substring(0, num);
+				value = arr[i].substr(num + 1);
+				this[name] = value;
+			}
+		}
+
+	}
 </script>
